--- a/TalismanSqlForum/Views/AdminForum/Edit.cshtml
+++ b/TalismanSqlForum/Views/AdminForum/Edit.cshtml
@@ -40,7 +40,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Назад", "Forum","Admin")
 </div>
 
 @section Scripts {
