--- a/TalismanSqlForum/Views/Admin/UsersGet.cshtml
+++ b/TalismanSqlForum/Views/Admin/UsersGet.cshtml
@@ -9,21 +9,21 @@
     <div class="panel-content">
         <div class="input-control switch" data-role="input-control">
             @{
-                var item = (TalismanSqlForum.Models.Admin.ViewRole)ViewData["userrole"];                
+                var item = (TalismanSqlForum.Models.Admin.ViewRole)ViewData["userrole"];
                 <label class="inline-block" style="margin-right: 20px;" id="moderator">
                     Moderator
-                   @if (item.is_moderator)
-                   {<input id="moderator" type="checkbox" checked="" value="@ViewData["username"]">}
-                   else
-                   {<input id="moderator" type="checkbox" value="@ViewData["username"]">}
+                    @if (item.is_moderator)
+                        <input id="moderator" type="checkbox" checked="" value="@ViewData["username"]">
+                    else
+                    <input id="moderator" type="checkbox" value="@ViewData["username"]">
                     <span class="check"></span>
                 </label>
                 <label class="inline-block" style="margin-right: 20px;" id="user">
                     User
                     @if (item.is_user)
-                    {<input id="user" type="checkbox" checked="" value="@ViewData["username"]">}
+                        <input id="user" type="checkbox" checked="" value="@ViewData["username"]">
                     else
-                    {<input id="user" type="checkbox" value="@ViewData["username"]">}
+                    <input id="user" type="checkbox" value="@ViewData["username"]">
                     <span class="check"></span>
                 </label>
             }
