--- a/TalismanSqlForum/Views/ForumList/_Stat.cshtml
+++ b/TalismanSqlForum/Views/ForumList/_Stat.cshtml
@@ -12,7 +12,7 @@
                 <p>Открыто тем вчера: @t.count_OldForumThemes</p>
                 <p>Создано сообщений вчера: @t.count_OldForumMessages</p>
                 <p>Всего просмотров: @t.count_View</p>
-                <p>Всего пользователей на форуме @t.count_Users</p>
+                <p>Всего пользователей на форуме: @t.count_Users</p>
                 <p>Всего сообщений: @t.count_ForumMessages</p>
                 <p>Всего тем: @t.count_ForumThemes</p>
                 <p>наиболее активные участники: @t.mega_User</p>
